# ModxLinguist

./: CMakeLists.txt  README.md
qml/: DialogAbout.qml  DialogAddLanguage.qml  DialogAddTopic.qml  DialogAddTranslations.qml  DialogDeleteLanguage.qml  DialogDeleteSelectedTranslations.qml  DialogDeleteTopic.qml  DialogDeleteTranslations.qml  DialogEditPackage.qml  DialogEditTopic.qml  DialogEditTranslations.qml  DialogMoveSelectedTranslations.qml  DialogMoveTranslations.qml  MessagePopup.qml  Translation.qml  main.qml
resources/: resources.qrc
src/: databasecomponent.cpp  databasecomponent.h  lexiconprocessor.cpp  lexiconprocessor.h  lexiconworker.cpp  lexiconworker.h  main.cpp
